trunk/Archive2/66/782168c9bb2f3f/output
main.cpp:7:3: error: ‘constexpr NonStack::NonStack()’ is private
   NonStack() = default;
   ^
main.cpp:13:10: error: within this context
 NonStack a;  //complile ok. but i thought it couldn't compile.
          ^
