trunk/Archive2/66/782168c9bb2f3f/main.cpp
#include <iostream>
#include <vector>

struct NonStack
{
private:
  NonStack() = default;
public:
  static NonStack* Create(){
    return new NonStack;
  }
};
NonStack a;  //complile ok. but i thought it couldn't compile.

int main()
{

    return 0;
}